wdl-analysis/tests/validation/missing-call-input.errors
error: unknown task or workflow `foo`
  ┌─ tests/validation/missing-call-input:7:10
  │
7 │     call foo { foo = bar }
  │          ^^^

warning[UnusedCall]: unused call `foo`
  ┌─ tests/validation/missing-call-input:7:10
  │
7 │     call foo { foo = bar }
  │          ^^^

error: unknown name `bar`
  ┌─ tests/validation/missing-call-input:7:22
  │
7 │     call foo { foo = bar }
  │                      ^^^

